adding interface for tracks, changing any to Track where needed

--- a/src/app/components/search/result-info/result-info.component.html
+++ b/src/app/components/search/result-info/result-info.component.html
@@ -19,6 +19,7 @@
         <app-track-slider [result]="res"></app-track-slider>
         <div class="buttons d-flex justify-content-center align-items-center">
           <!-- TODO: add functionality to rev and forward buttons -->
+          <!-- FIXME: play button does not puase -->
           <fa-icon class="reverse-button fa-lg" [icon]="faForward"></fa-icon>
           <button
             class="btn btn-outline-success play-button"
