refactoring searcher logic to implement proper error handling

--- a/src/app/components/playlists/playlists.component.html
+++ b/src/app/components/playlists/playlists.component.html
@@ -4,6 +4,7 @@
       New Playlist
     </button>
   </div>
+  <!-- TODO: looks pretty narly, I need to improve this -->
   <div class="playlists">
     <div class="playlist-grid">
       <ng-container *ngIf="getPlaylists() | async as playlists">
