--- a/src/app/components/playlists/playlist-modal/playlist-modal.component.html
+++ b/src/app/components/playlists/playlist-modal/playlist-modal.component.html
@@ -79,6 +79,7 @@
             </div>
           </form>
           <hr />
+          <!-- TODO: need to improve look of searcher inside of the modal -->
           <app-searcher></app-searcher>
           <ng-container *ngIf="tracks.length > 0">
             <div class="playlist-table">
@@ -95,6 +96,7 @@
                     alt="{{ track.name }} Image"
                   />
                   <h4>{{ track.name }}</h4>
+                  <!-- TODO: implement functionality in buttons -->
                   <div class="playlist-btns">
                     <button
                       (click)="onDeleteTrack(i)"
