--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,3 +1,4 @@
+<!-- TODO: need to build playlist viewer component -->
 <app-searcher></app-searcher>
 <div class="container mt-3">
   <div class="row">
