adding service for spotify backend auth

--- a/src/app/components/side-nav/side-nav.component.html
+++ b/src/app/components/side-nav/side-nav.component.html
@@ -21,5 +21,10 @@
         ><fa-icon class="fa-xl" [icon]="faList"></fa-icon
       ></a>
     </li>
+    <li>
+      <a class="side-nav-link" routerLink="/login"
+        ><fa-icon class="fa-xl" [icon]="faRightToBracket"></fa-icon
+      ></a>
+    </li>
   </ul>
 </nav>
