--- a/src/app/components/search/result-info/track-slider/track-slider.component.css
+++ b/src/app/components/search/result-info/track-slider/track-slider.component.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: 4px;
   border-radius: 10px;
-  background-color: grey;
+  background-color: #c8c8c8;
   opacity: 0.7;
   transition: opacity 0.2s;
 }
