--- a/src/app/components/searcher/searcher.component.html
+++ b/src/app/components/searcher/searcher.component.html
@@ -33,7 +33,7 @@
               <div *ngFor="let item of results">
                 <li
                   class="dropdown-item d-flex align-items-center p-3"
-                  (click)="onAddTrackToQueue(item)"
+                  (click)="onSelectTrack(item)"
                 >
                   <img
                     style="width: 100px; height: auto"
