--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,5 +2,9 @@
   display: block;
   width: 100%;
   height: 100%;
-  background: linear-gradient(#ddd78d, #8e95de);
+  background: linear-gradient(
+    hsl(33, 100%, 50%, 0.3),
+    hsl(235, 100%, 81%, 0.3)
+  );
+  background-size: cover;
 }
