--- a/src/app/components/shared/playlist/playlist.component.html
+++ b/src/app/components/shared/playlist/playlist.component.html
@@ -15,6 +15,7 @@
     <p class="card-text">
       {{ description }}
     </p>
-    <a class="btn btn-primary float-end" (click)="onClick()">Details</a>
+    <a class="btn btn-success float-end" (click)="onQueue()">Queue</a>
+    <a class="btn btn-primary float-end me-2" (click)="onClick()">Details</a>
   </div>
 </div>
