--- a/src/app/components/search/playlist-viewer/playlist-viewer.component.html
+++ b/src/app/components/search/playlist-viewer/playlist-viewer.component.html
@@ -1,3 +1,4 @@
+<!-- FIXME: playlists not displaying correctly -->
 <div class="playlist-viewer">
   <ng-container
     *ngIf="getPlaylists() | async as playlists; else noPlaylistsRef"
