fixing issue with detail button on playlist-viewer

--- a/src/app/components/playlists/playlist-modal/playlist-detail.component.html
+++ b/src/app/components/playlists/playlist-modal/playlist-detail.component.html
@@ -109,7 +109,12 @@
                     >
                       Queue
                     </button>
-                    <button class="btn btn-sm btn-success">Play</button>
+                    <button
+                      (click)="onPlayTrack(track)"
+                      class="btn btn-sm btn-success"
+                    >
+                      Play
+                    </button>
                   </div>
                 </div>
               </div>
