--- a/src/app/components/search/player/player.component.html
+++ b/src/app/components/search/player/player.component.html
@@ -1,7 +1,3 @@
-<ng-container *ngIf="errorMessage">
-  <!-- FIXME: clear error message after song select -->
-  <span class="alert alert-danger">{{ errorMessage }}</span>
-</ng-container>
 <ng-container *ngIf="result$ | async as res; else defaultSong">
   <div class="player">
     <div class="row">
@@ -20,12 +16,17 @@
         <app-track-slider [result]="res"></app-track-slider>
         <div class="buttons d-flex justify-content-center align-items-center">
           <!-- TODO: add functionality to rev and forward buttons -->
-          <fa-icon class="reverse-button fa-lg" [icon]="faForward"></fa-icon>
+          <fa-icon
+            (click)="onReverseTrack(res)"
+            class="reverse-button fa-lg"
+            [icon]="faForward"
+          ></fa-icon>
           <button
             class="btn btn-outline-success play-button"
             (click)="toggleSong()"
           >
             <fa-icon
+              (click)="onForwardTrack(res)"
               class="fa-2xl"
               [icon]="playerStatus ? faPause : faPlay"
             ></fa-icon>
@@ -37,6 +38,9 @@
   </div>
 </ng-container>
 <ng-template #defaultSong>
+  <ng-container *ngIf="errorMessage">
+    <span class="alert alert-danger">{{ errorMessage }}</span>
+  </ng-container>
   <div class="player">
     <div class="row">
       <div class="col d-flex flex-column align-items-center">
