--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,2 @@
-<!-- <div class="row">
-  <div class="col-xs-12">
-    <h1>Simple Music Player</h1>
-    <h2>Play the song!</h2>
-    <button
-      class="btn"
-      [class.btn-danger]="isPlaying"
-      [class.btn-success]="!isPlaying"
-      type="button"
-      (click)="playSong()"
-    >
-      {{ isPlaying ? "Stop" : "Play" }}
-    </button>
-  </div>
-</div> -->
-<app-side-nav></app-side-nav>
+<app-side-nav *ngIf="isAuth | async"></app-side-nav>
 <router-outlet></router-outlet>
