got user data saving to firestore

--- a/src/app/components/playlists/playlists.component.html
+++ b/src/app/components/playlists/playlists.component.html
@@ -3,6 +3,7 @@
     <button class="btn btn-primary playlists-button" (click)="onNewPlaylist()">
       New Playlist
     </button>
+    <button class="btn btn-secondary" (click)="onSavePlaylists()">Save</button>
   </div>
   <div class="playlists">
     <div class="playlist-grid">
