--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,10 +1,9 @@
 :host {
   display: block;
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
   background: linear-gradient(
     hsl(33, 100%, 50%, 0.3),
     hsl(235, 100%, 81%, 0.3)
   );
-  background-size: cover;
 }
