adding nav-item

--- a/src/app/components/shared/side-nav/side-nav.component.html
+++ b/src/app/components/shared/side-nav/side-nav.component.html
@@ -1,34 +1,1 @@
-<nav class="side-nav">
-  <ul>
-    <li id="title-li">
-      <a class="nav-link">
-        <h1 id="title">SMP</h1>
-      </a>
-    </li>
-    <li>
-      <a
-        class="side-nav-link mb-1"
-        routerLink="/search"
-        routerLinkActive="side-nav-link-active"
-        ><fa-icon class="fa-xl" [icon]="faHouse"></fa-icon
-      ></a>
-    </li>
-    <li>
-      <a
-        class="side-nav-link"
-        routerLink="/playlists"
-        routerLinkActive="side-nav-link-active"
-        ><fa-icon class="fa-xl" [icon]="faList"></fa-icon
-      ></a>
-    </li>
-    <li>
-      <a class="side-nav-link" routerLink="/auth/login"
-        ><fa-icon
-          class="fa-xl"
-          [icon]="faRightFromBracket"
-          (click)="onLogout()"
-        ></fa-icon
-      ></a>
-    </li>
-  </ul>
-</nav>
+<nav class="side-nav"></nav>
