--- a/src/app/components/shared/side-nav/nav-item/nav-item.component.html
+++ b/src/app/components/shared/side-nav/nav-item/nav-item.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex">
-  <fa-icon [icon]="icon"></fa-icon>
-  <span>{{ name }}</span>
+<div class="d-flex nav-item-content">
+  <fa-icon class="me-3" [icon]="icon"></fa-icon>
+  <span class="">{{ name }}</span>
 </div>
