--- a/src/app/components/shared/searcher/searcher.component.html
+++ b/src/app/components/shared/searcher/searcher.component.html
@@ -16,7 +16,7 @@
           type="text"
           id="track-searcher"
           name="track-searcher"
-          placeholder="search for tracks"
+          placeholder="Search"
           [(ngModel)]="searcherValue"
           (keyup)="onSearch(searcherValue)"
         />
