--- a/src/app/components/shared/side-nav/side-nav.component.css
+++ b/src/app/components/shared/side-nav/side-nav.component.css
@@ -23,6 +23,18 @@
     width: 268px;
     padding-top: 20px;
   }
+
+  .side-nav-logo {
+    width: auto;
+    height: 250px;
+    margin: 0 auto;
+    display: block;
+  }
+
+  .side-nav-list {
+    width: 75%;
+    margin: 1rem auto 5rem auto;
+  }
 }
 
 @media only screen and (max-width: 43.75em) {
