--- a/src/app/components/shared/searcher/searcher.component.html
+++ b/src/app/components/shared/searcher/searcher.component.html
@@ -12,6 +12,11 @@
         >{{ resultsErr.message }}</span
       >
       <div class="form-group searcher-form-group">
+        <fa-icon
+          id="searcher-icon"
+          class="fa-lg"
+          [icon]="faMagnifyingGlass"
+        ></fa-icon>
         <input
           type="text"
           id="track-searcher"
