--- a/src/app/components/search/top-artists/top-artists.component.html
+++ b/src/app/components/search/top-artists/top-artists.component.html
@@ -7,7 +7,7 @@
         [src]="artist.images[0].url"
         [alt]="artist.name + ' Image'"
       />
-      <h4>{{ artist.name }}</h4>
+      <h4 class="mb-3">{{ artist.name }}</h4>
     </div>
   </ng-container>
 </div>
