--- a/src/app/components/search/top-artists/top-artists.component.css
+++ b/src/app/components/search/top-artists/top-artists.component.css
@@ -1,8 +1,9 @@
 .artist-img {
   height: auto;
   width: 15.625rem;
-  border-radius: 10px;
-  margin-bottom: 0.5rem;
+  border-radius: 30px;
+  margin-bottom: 1rem;
+  box-shadow: 0 15px 10px rgb(0, 0, 0, 0.1);
 }
 
 .top-artists-container {
