--- a/src/app/components/search/queue/queue.component.html
+++ b/src/app/components/search/queue/queue.component.html
@@ -1,43 +1,41 @@
 <!-- TODO: moving text on hover if the text is overflowing -->
 <div class="smp-container">
   <div class="smp-queue">
-    <div class="ps-3 row mb-4">
+    <!-- <div class="ps-3 row mb-4">
       <div class="row-group smp-queue-grid">
         <h2 class="header">#</h2>
         <h2 class="header">Title</h2>
         <h2 class="header">Album</h2>
         <h2 class="header">Length</h2>
       </div>
-    </div>
-    <ng-container *ngIf="getQueue() | async as queue">
-      <div
-        class="queue-row p-3"
-        [ngClass]="{ playing: item.name === getCurrentTrack() }"
-        *ngFor="let item of queue; let i = index"
-      >
+    </div> -->
+    <ng-container *ngIf="getQueue() | async as queue; else noSongsRef">
+      <div class="queue-row p-2" *ngFor="let item of queue; let i = index">
         <div class="row-group smp-queue-grid smp-queue-row">
-          <div>
-            <span>{{ i }}</span>
-            <button
-              class="play-select btn btn-outline-success"
+          <span class="text-center">{{ i + 1 }}</span>
+          <img
+            class="song-preview-img"
+            [src]="item.album.images[1].url"
+            [alt]="item.name"
+          />
+          <div class="d-flex justify-content-center">
+            <fa-icon
+              class="play-select"
               (click)="playSong(item)"
-            >
-              <fa-icon
-                [icon]="
-                  item.name === getCurrentTrack() && isPlaying
-                    ? faPause
-                    : faPlay
-                "
-              ></fa-icon>
-            </button>
+              [icon]="
+                item.name === getCurrentTrack() && isPlaying ? faPause : faPlay
+              "
+            ></fa-icon>
           </div>
           <p class="special-text queue-text">
             {{ item.name }}
           </p>
-          <p class="special-text queue-text">
-            {{ item.album.name }}
-          </p>
-          <p class="ps-2 queue-text">
+          <div class="special-text">
+            <p #albumNameRef class="queue-text auto-scroll">
+              {{ item.album.name }}
+            </p>
+          </div>
+          <p class="ps-2 queue-text text-center">
             {{ item.duration_ms | time }}
           </p>
           <div>
@@ -51,5 +49,12 @@
         </div>
       </div>
     </ng-container>
+    <ng-template #noSongsRef>
+      <div
+        class="queue-background d-flex justify-content-center align-items-center"
+      >
+        <p style="font-size: 1.5rem">No songs in queue.</p>
+      </div>
+    </ng-template>
   </div>
 </div>
