--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,11 +1,10 @@
 <app-searcher [searchType]="'queue'"></app-searcher>
 <div class="container mt-4">
-  <div class="row">
+  <div class="row mb-5">
     <div class="col-sm-12">
       <app-top-artists></app-top-artists>
     </div>
   </div>
-  <hr class="my-5" />
   <div class="row">
     <div class="col-sm-6">
       <app-player></app-player>
